2001-03-18  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* gas/mri/mri.exp: Fix test of m6811/m6812 targets.

2001-03-17  Philip Blundell  <philb@gnu.org>

	* gas/vtable/vtable.exp: Don't run tests on AVR.
	* gas/macros/macros.exp: Mark strings test xfail for AVR.

2001-02-23  H.J. Lu  <hjl@gnu.org>

	* gas/ia64/opc-a-err.l: Fix "cmp4.lt.or".

	* gas/ia64/opc-a.pl: Add tests for pseudo-ops for "cmp" and
	"cmp4".
	* gas/ia64/opc-a.s: Rebuilt.
	* gas/ia64/opc-a.d: Likewise.

2001-02-08  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* gas/mri/mri.exp: Don't execute the M68K specific tests 
	on m6811-elf and m6812-elf targets, still run the generic MRI tests.

2001-02-04  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* gas/m68hc11/malis.s: New test to verify compliance with Motorola
	Assembly Language Input Standard.
	* gas/m68hc11/malis.d: New file.
	* gas/m68hc11/malis-include.s: New file.
	* gas/m68hc11/all.exp: Add the new test.

2001-01-12  Alan Modra  <alan@linuxcare.com.au>

	* gas/i386/i386.exp (gas_64_check): Correct target string.
	Use gas_64_check rather than target string to decided whether
	x86_64 checks should run.

	* gas/i386/sse2.s: Add a label to cure objdump "no symbols" error.
	* gas/i386/ssemmx2.s: Likewise.
	* gas/i386/sse2.d: Update to suit.
	* gas/i386/ssemmx2.s: Likewise.

2001-01-11  Peter Targett <peter.targett@arccores.com>

	* gas/arc/alias.*: Removed.
	* gas/arc/branch.*: Likewise.
	* gas/arc/insn3.*: Likewise.
	* gas/arc/math.*: Likewise.
	* gas/arc/sshift.*: Likewise.
	* gas/arc/arc.exp: Simplified test process for base case
	instruction set by adding run_dump_test cases for all base
	instructions.
 	* gas/arc/adc.s, gas/arc/adc.d: New test cases and dump.
 	* gas/arc/add.s, gas/arc/add.d: Likewise.
 	* gas/arc/and.s, gas/arc/and.d: Likewise.
 	* gas/arc/asl.s, gas/arc/asl.d: Likewise.
 	* gas/arc/asr.s, gas/arc/asr.d: Likewise.
 	* gas/arc/b.s, gas/arc/b.d: Likewise.
 	* gas/arc/bic.s, gas/arc/bic.d: Likewise.